--- a/noteStyle.css
+++ b/noteStyle.css
@@ -1,6 +1,7 @@
 body {
-    background-color:rgba(53, 133, 170, 0.87);
+    background-color: rgba(53, 133, 170, 0.87);
 }
+
 li {
     list-style: none;
 }
@@ -13,3 +14,28 @@ input {
     width: 200px;
     text-indent: 5px;
 }
+
+input:focus {
+    outline: none;
+}
+
+#note-input-area{
+width: 500px;
+padding-left: 5px;
+border:none;
+border-radius:5px;
+box-shadow:0px 0px 5px #666666 inset;
+text-indent:5px;
+}
+
+textarea{
+    margin-top: 10px;
+    border:none;
+    border-radius:5px;
+    box-shadow:0px 0px 5px #666666 inset;
+    width:90%;
+    height: 150px;
+    text-indent:5px;
+    resize: none;
+    overflow: scroll;
+    }
