update back styling

--- a/portfolio/Challenge1/style.css
+++ b/portfolio/Challenge1/style.css
@@ -23,6 +23,10 @@ ul {
    list-style-type: none; 
 }
 
+a {
+  text-decoration: none;
+}
+
 .container {
     min-width: 700px;
     display: flex;
